# shapiq-prompt-risk-attribution

./: .dockerignore  .gcloudignore  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  API.md  DOCKER.md  Dockerfile  LICENSE  README.md  architecture.drawio  docker-compose.yml  dvc.yaml  handover_sofiia.md  index.html  locustfile.py  objects.inv  pyproject.toml  tasks.py
.dvc/: config
.github/workflows/: ci-api.yaml  ci-lint.yaml  ci-train.yaml  cml-data.yaml  monitoring.yaml  stage-model.yaml
api/: index.html
configs/: sweep.yaml  train.yaml
configs/hardware/: ddp.yaml  local.yaml  single_gpu.yaml
configs/profiling/: disabled.yaml  pytorch.yaml  simple.yaml
data/: processed.dvc  prompts.json.dvc  raw.dvc
data/processed/: prompt_risk_dataset.jsonl.dvc
deploy/: README.md  alerts.sh  cloudrun.sh  dashboard.json
dockerfiles/: api.dockerfile  train-entrypoint.sh  train.dockerfile  train.gpu.dockerfile
docs/: README.md  mkdocs.yaml
docs/source/: api.md  getting-started.md  index.md  monitoring.md  reference.md  structure.md  training.md
experiments/: run_attribution.py
getting-started/: index.html
models/: .gitignore
monitoring/: index.html
notebooks/: sentiment_analysis_test.ipynb  shapiq_cot_attribution.ipynb
reference/: ProgressSummary.md  ResearchDesign.md  index.html
reports/: README.md  report.py
reports/results/distilbert/: advbench_000.json  advbench_001.json  advbench_002.json  advbench_003.json  advbench_004.json  advbench_005.json  advbench_006.json  advbench_008.json  advbench_009.json
reports/results/llama/version1/: advbench_000.json  advbench_001.json  advbench_002.json  advbench_003.json  advbench_004.json  advbench_005.json  advbench_006.json  advbench_007.json  advbench_008.json
reports/results/llama/version2/: advbench_001.json  advbench_002.json  advbench_003.json  advbench_004.json  advbench_005.json  advbench_006.json  advbench_007.json  advbench_008.json  advbench_009.json
search/: search_index.json
src/shapiq/: game.py  pipeline.py  pipeline_natural.py  safety_analysis.py
src/shapiq_attribution/: api.py  attribution.py  data.py  data_statistics.py  evaluate.py  game.py  lightning_data_module.py  lightning_module.py  model.py  model_registry.py  monitoring.py  pipeline.py  pipeline_natural.py  safety_analysis.py  split_data.py  train.py  visualize.py  web.py
src/shapiq_cot/: attribution.py  data.py  model.py  pipeline.py  pipeline_natural.py
structure/: index.html
tests/: test_api.py  test_attribution.py  test_data.py  test_data_statistics.py  test_evaluate.py  test_experiments.py  test_game.py  test_model.py  test_model_registry.py  test_monitoring.py  test_split_data.py  test_train.py  test_visualize.py
training/: index.html
