[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "shapiq_attribution"
version = "0.0.1"
description = "SHAPIQ-based attribution for prompt-risk classification"
authors = [
  { name = "MLOps_team", email = "your@email.com" },
]
license = { file = "LICENSE" }
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.8.5",
    "dvc>=3.67.1",
    "dvc-gdrive>=3.0.1",
    "dvc-gs>=3.0.2",
    "evidently>=0.7.21",
    "fastapi==0.115.6",
    "google-cloud-storage>=2.19.0",
    "hydra-core>=1.3.2",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "prometheus-client>=0.21.1",
    "scikit-learn>=1.8.0",
    "shapiq>=1.5.0",
    "torch==2.6.0",
    "transformers>=5.9.0",
    "typer==0.15.1",
    "uvicorn==0.34.0",
    "wandb>=0.27.0",
]

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.0",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "ruff==0.1.3",
    "mypy==1.19.1",
    "mkdocs-material==9.7.1",
    "mkdocstrings-python==2.0.1",
]

# CPU-only torch on Linux: the default PyPI wheel drags in ~7 GB of CUDA
# libraries (nvidia-*, triton) that the CPU-only containers never use — enough
# to blow the disk on GitHub Actions runners. macOS wheels are CPU/MPS anyway.
# (If GPU training in docker is ever needed again, drop this source override.)
[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 120
lint.select = ["I", "E", "F", "B", "UP"]

[tool.coverage.run]
omit = ["tests/*"]
