[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "shapiq_attribution"
version = "0.0.1"
description = "SHAPIQ-based attribution for prompt-risk classification"
authors = [
  { name = "MLOps_team", email = "your@email.com" },
]
license = { file = "LICENSE" }
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.8.5",
    "dvc>=3.67.1",
    "dvc-gdrive>=3.0.1",
    "dvc-gs>=3.0.2",
    "evidently>=0.7.21",
    "fastapi==0.115.6",
    "google-cloud-secret-manager>=2.30.0",
    "google-cloud-storage>=2.19.0",
    "hydra-core>=1.3.2",
    "lightning>=2.6.5",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "prometheus-client>=0.21.1",
    "scikit-learn>=1.8.0",
    "shapiq>=1.5.0",
    "torch==2.6.0; sys_platform != 'linux'",
    "torchmetrics>=1.9.0",
    "transformers>=5.9.0",
    "typer==0.15.1",
    "uvicorn==0.34.0",
    "wandb>=0.27.0",
]
[project.optional-dependencies]
cpu = [
    "torch==2.6.0; sys_platform == 'linux'",
]
cu124 = [
    "torch==2.6.0; sys_platform == 'linux'",
]

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.0",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "ruff==0.1.3",
    "mypy==1.19.1",
    "mkdocs-material==9.7.1",
    "mkdocstrings-python==2.0.1",
]

# CPU-only torch on Linux: the default PyPI wheel drags in ~7 GB of CUDA
# libraries (nvidia-*, triton) that the CPU-only containers never use — enough
# to blow the disk on GitHub Actions runners. macOS wheels are CPU/MPS anyway.
# CI and CPU containers select `--extra cpu`; the GPU image selects `--extra cu124`.
[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cu124" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu124", extra = "cu124" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.ruff]
line-length = 120
lint.select = ["I", "E", "F", "B", "UP"]

[tool.coverage.run]
# Measure all project source, including modules no test imports (reported at
# 0%). tasks.py (invoke wrappers around shell commands) and the course's
# reports/report.py are deliberately out of scope.
source = ["src", "experiments"]
omit = ["tests/*"]
